--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ select{
     outline-style: none;
     border: 3px solid rgb(10, 10, 10);
 }
+::placeholder{
+    opacity: 0.5;
+}
 button{
    margin:5% 36%;
    padding: 8px 32px;
